[fix] панель навигации для мобилок: ~ иконка вдогонку; ~ z-index:1000 из-за slick-carousel; ~ шрифт 20px как в макете; ~ border для кнопок.

--- a/css/navmenumobile.css
+++ b/css/navmenumobile.css
@@ -1,9 +1,11 @@
-.frt-nav-mobile-panel{position:fixed;left:0;right:0;bottom:0;min-width:360px;background:#fff}
+.frt-nav-mobile-panel{position:fixed;z-index:1000;left:0;right:0;bottom:0;min-width:360px;background:#fff;font-size:20px}/* TODO: slick-carousel use z-index:999; можно меньше? */
 .frt-nav-mobile-panel,.frt-nav-mobile-panel-substratum{height:80px}
 
 .frt-nav-mobile-panel .dg-list.dg-list--flexbox .frt-nav-mobile-panel__button-box{flex:1 auto;}
 .frt-nav-mobile-panel .dg-list.dg-list--flexbox .frt-nav-mobile-panel__button-box--menu{flex:0 auto;width:80px}
-.frt-nav-mobile-panel__button{position:relative;border:1px solid #e6e6e6;height:100%}
+.frt-nav-mobile-panel__button{position:relative;height:100%}
+.frt-nav-mobile-panel__button-box .frt-nav-mobile-panel__button{border:1px solid #e6e6e6;border-right-width:0}
+.frt-nav-mobile-panel__button-box--menu .frt-nav-mobile-panel__button{border-width:1px}
 .frt-nav-mobile-panel__button-inside{margin:auto}
 .frt-nav-mobile-panel__button-inside .frt-icon,.frt-nav-mobile-panel__button-inside .frt-text{vertical-align:middle}
 
